# Social-Network-Graph

./: .gitignore  README.md  package-lock.json  package.json
backend/: CMakeLists.txt
backend/api/: CMakeLists.txt  graph_api.cpp
backend/include/: Graph.h  SocialGraph.h  algorithms.h
backend/src/: CMakeLists.txt  graph.cpp  social_graph.cpp
dataset/scripts/: clean_data.py  export_graph.py
docs/: API_Documentation.md  HowToRun.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: GraphVisualization.js
frontend/src/pages/: GraphPage.jsx  HomePage.jsx  SearchResults.jsx
frontend/src/services/: api.js
frontend/src/styles/: App.css
server/: app.py  requirements.txt
